# commandline-and-quadtrees

commandline_library/: CMakeLists.txt  bookStructure.h  booklist.txt  books.c  books.h  functions_to_test.h  librarian.c  librarian.h  main.c  student.c  student.h  studentStructure.h  studentlist.txt  test.c  tests
quadtree_start/: Makefile  basicQuadtree  buildTree.c  buildTree.h  destroyTree.c  destroyTree.h  main.c  quad  quad.out  test.c  treeStructure.h  valueTree.c  valueTree.h  writeTree.c  writeTree.h
